# ematools

./: LICENSE  README.md  pyproject.toml  test_ae_extraction.py
examplefiles/: product_newest.html  product_oldest.html  register_p1.html
scripts/: notebook.py  smpc.py
src/ematools/: data.py  extract_ae.py  helper.py  parse.py  patterns.py
tests/: test_parse.py
visual_inspection/: smpc.py
visual_inspection/smpc_examples/: camelot.csv
