[project]
name = "ematools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "camelot-py[base]>=1.0.9",
    "ipywidgets>=8.1.8",
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "polars>=1.35.2",
    "pymupdf>=1.26.6",
    "pystow>=0.7.11",
    "pytesseract>=0.3.13",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "tabula-py[jpype]>=2.10.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
